# shopify-standards-marketplace

./: CLAUDE.md  README.md  blog-article.md  blog-article2.md  blog.mdx
.claude-plugin/: marketplace.json
claude-tracker/: README.md
claude-tracker/.claude-plugin/: plugin.json
claude-tracker/hooks/: hooks.json
claude-tracker/scripts/: claude-tracker-session-start.sh  claude-tracker-skill.sh  claude-tracker-stop.sh
mcp-servers/pagespeed-insights/: README.md  pyproject.toml  server.py
pilot/.claude-plugin/: plugin.json
shopify-app-standards/: README.md
shopify-app-standards/.claude-plugin/: plugin.json
shopify-app-standards/agents/: builder.md  code-reviewer.md  codebase-analyzer.md  output-validator.md
shopify-app-standards/commands/: assess.md  build.md  capture.md  clarify.md  fix.md  plan.md
shopify-app-standards/setup/: hooks.json
shopify-performance-standards/.claude-plugin/: plugin.json
shopify-performance-standards/agents/: performance-scorer.md
shopify-performance-standards/commands/: audit.md  capture.md  diagnose.md  optimize.md  report.md  setup.md  verify.md
shopify-theme-standards/: README.md
shopify-theme-standards/.claude-plugin/: plugin.json
shopify-theme-standards/agents/: code-reviewer.md  codebase-analyzer.md  output-validator.md
shopify-theme-standards/commands/: assess.md  build.md  capture.md  clarify.md  figma.md  fix.md  plan.md
shopify-theme-standards/hooks/: hooks.json
shopify-theme-standards/setup/: hooks.json
shopify-theme-toolkit/: README.md
shopify-theme-toolkit/.claude-plugin/: plugin.json
(+155 files in other folders)
