[project]
name = "pagespeed-insights-mcp"
version = "1.0.0"
description = "MCP server for Google PageSpeed Insights — fetches performance audits, parses results, compares before/after scores."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
